<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.PhoneDetailsFragment">

    <ScrollView
        android:id="@+id/scrollViewDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/details_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textViewTitleDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name_phone"
            android:textColor="@color/primary_text"
            android:textSize="24sp" />
    </ScrollView>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/description_phone"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetails" />

    <ImageView
        android:id="@+id/imageViewDetails"
        android:layout_width="237dp"
        android:layout_height="298dp"
        android:layout_marginTop="100dp"
        android:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollViewDetails"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/image_phone_details" />

    <TextView
        android:id="@+id/textViewLastPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/lastprice_phone"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetails"
        app:layout_constraintTop_toTopOf="@+id/imageViewDetails" />

    <TextView
        android:id="@+id/textViewPriceDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/price_phone"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/textViewLastPrice"
        app:layout_constraintStart_toStartOf="@+id/textViewLastPrice"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastPrice" />

    <TextView
        android:id="@+id/textViewCreditDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/credit_phone"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@+id/textViewPriceDetails"
        app:layout_constraintStart_toStartOf="@+id/textViewPriceDetails"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriceDetails" />

    <ImageView
        android:id="@+id/imageViewCardTarget"
        android:layout_width="37dp"
        android:layout_height="23dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_credit_score_24"
        app:layout_constraintEnd_toEndOf="@+id/textViewCreditDetails"
        app:layout_constraintStart_toStartOf="@+id/textViewCreditDetails"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreditDetails"
        android:contentDescription="@string/credit_phone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@drawable/mail"
        android:contentDescription="@string/send_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>